--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1><a href="https://feutech.edu.ph" target="blank">FEU TECH Official Website</a></h1>
     <h1><a href="https://www.facebook.com" target="blank">Mukhang libro</a></h1>
-    <a href="https://feutech.edu.ph"><img src="/images/feutechlogo.png"></a>
+    <a href="https://feutech.edu.ph"><img src="images/feutechlogo.png"></a>
     <a href="image01.html" target=" _blank">Image ilnk Document</a>
 </body>
 </html>
